<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/darkGray">

    <!-- Title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:background="@drawable/title_background">

        <TextView
            style="@style/WorkingsTextView"
            android:text="@string/subTitle"
            android:id="@+id/workingsTextView"/>

        <TextView
            style="@style/ResultTextView"
            android:text="@string/title"
            android:id="@+id/resultTextView"/>
    </LinearLayout>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7"
        android:padding="5dp">
        <!-- Buttons: C, ( ), ^, / -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights,UselessParent">
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/red"
                    android:text="@string/clear"
                    android:onClick="clearOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/parenthesis"
                    android:onClick="parenthesisOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/exponentiation"
                    android:onClick="exponentiationOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/division"
                    android:onClick="divisionOnClick"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Buttons: 7, 8, 9, X -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/seven"
                    android:onClick="sevenOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/eight"
                    android:onClick="eightOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/nine"
                    android:onClick="nine"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/multiplication"
                    android:onClick="multiplicationOnClick"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Buttons: 4, 5, 6, - -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/four"
                    android:onClick="fourOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/five"
                    android:onClick="fiveOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/six"
                    android:onClick="sixOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/subtraction"
                    android:onClick="subtractionOnClick"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Buttons: 1, 2, 3, + -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/one"
                    android:onClick="oneOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/two"
                    android:onClick="twoOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/three"
                    android:onClick="threeOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/orange"
                    android:text="@string/addition"
                    android:onClick="additionOnClick"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Buttons: ., 0, = -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessParent">
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/dot"
                    android:onClick="dotOnClick"/>
                <Button
                    style="@style/ButtonStyle"
                    android:backgroundTint="@color/black"
                    android:text="@string/zero"
                    android:onClick="zeroOnClick"/>
                <Button
                    style="@style/ButtonStyleEquals"
                    android:backgroundTint="@color/orange"
                    android:text="@string/equals"
                    android:onClick="equalsOnClick"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>